# CS-Image-Generation

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  _utils.py  clippy.toml  cosmicsig-sync.service  cosmicsig-sync.timer  deny.toml  justfile  pgo.sh  pyproject.toml  run-test-images.py  run.py  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: hot_paths.rs  post_effects.rs  spectral.rs  style_meta.rs
ci/: README.md  compare_v1_v2.py  verify_reference.py
ci/reference/: baseline_512x288.json  generate_reference.sh
docs/: spectral-algorithm.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_seed.rs  spd_to_rgba.rs
marketing/: README.md  ambassador-program.md  art-algorithm-guide.md  art-pipeline-infographic.html
proptest-regressions/render/: randomizable_config.txt
src/: analysis.rs  app.rs  cli.rs  drift.rs  drift_config.rs  error.rs  generation_log.rs  kinematics.rs  lib.rs  main.rs  oklab.rs  perf.rs  pipeline.rs  sim.rs  soa_positions.rs  spectral_constants.rs  spectrum.rs  spectrum_cie.rs  spectrum_simd.rs  utils.rs
src/extra_outputs/: ar_export.rs  avatar.rs  cinemagraph.rs  cinematic_zoom.rs  color_palette.rs  dossier.rs  exhibition_page.rs  extended_audio.rs  gallery_variants.rs  genesis_burst.rs  gltf_export.rs  loop_clip.rs  mod.rs  museum_print.rs  orbit_comparison.rs  phase_portrait.rs  rarity_report.rs  reveal_video.rs  social_kit.rs  sonification.rs  spectral_assembly_video.rs  spectral_aurora_video.rs  spectral_breathing_video.rs  spectral_cycle_video.rs  spectral_decomposition_video.rs  spectral_doppler_video.rs  spectral_fingerprint.rs  spectral_gallery.rs  spectral_narrowband_video.rs  spectral_prism_video.rs  spectral_ripple_video.rs  spectral_slit_scan_video.rs  spectral_video_utils.rs  stats_card.rs  timelapse.rs  wallpaper.rs
src/post_effects/: aether.rs  atmospheric_depth.rs  bloom_pyramid.rs  champleve.rs  chromatic_bloom.rs  color_grade.rs  crystal_facets.rs  diffraction_spikes.rs  dog_bloom.rs  edge_luminance.rs  fine_texture.rs  gaussian_bloom.rs  glaze.rs  glow_enhancement.rs  god_rays.rs  gradient_map.rs  ink_cut_edges.rs  lens_flare.rs  micro_contrast.rs  mod.rs  nebula_clouds.rs  opalescence.rs  palette_harmony.rs  perceptual_blur.rs  prismatic_sparkle.rs  star_field.rs  starfield.rs  temporal_smoothing.rs  utils.rs
src/render/: art_style.rs  batch_drawing.rs  buffer_pool.rs  camera.rs  camera_path.rs  color.rs  composition.rs  constants.rs  context.rs  curation.rs  director.rs  drawing.rs  effect_config.rs  effect_randomizer.rs  effects.rs  error.rs  framing_fit.rs  gpu.rs  grade_presets.rs  hero_outputs.rs  histogram.rs  hue_palette.rs  mod.rs  mood.rs  nebula_presets.rs  parameter_descriptors.rs  pipeline_flags.rs  quality_gate.rs  randomizable_config.rs  simd_tonemap.rs  spectral_effects.rs  spectral_output.rs  spectral_passes.rs  spectral_tonemap.rs  tonemapping.rs  trajectory.rs  types.rs  velocity_hdr.rs  video.rs
src/render/randomizable_config/: constraints.rs  mod.rs  types.rs
src/render/shaders/: project.wgsl  splat.wgsl
src/render/spectral_output/: bin_buffers.rs  gallery.rs  mod.rs  sweep.rs
tests/: cli.rs  concurrency.rs  cross_compile.rs  cross_platform.rs  determinism.rs  error_handling.rs  numerical_stability.rs  pipeline_integration.rs  properties.rs  render_metrics.rs  v2_pipeline.rs  variety.rs
tests/common/: mod.rs
tests_py/: test_python_helpers.py
