[package]
name         = "three_body_problem"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.94.1"

[lib]
name = "three_body_problem"
path = "src/lib.rs"

[[bin]]
name = "three_body_problem"
path = "src/main.rs"

[lints.rust]
warnings = "deny"

[dependencies]
bytemuck = "1.25.0"
chrono   = "0.4.44"
clap     = { version = "4.6.0", features = ["derive"] }
hex      = "0.4.3"
image    = { version = "0.25.10", default-features = false, features = ["png"] }
nalgebra = "0.34.2"
once_cell = "1.21.4"
opensimplex2 = "1.1.0"
rayon    = "1.11.0"
rustfft  = "6.4.1"
serde    = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha3     = "0.11.0"
smallvec = "1.15.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
incremental     = false
strip           = "symbols"
