[package]
name         = "three_body_problem"
version      = "1.0.0"
edition      = "2024"
rust-version = "1.94.1"

[lib]
name = "three_body_problem"
path = "src/lib.rs"

[[bin]]
name = "three_body_problem"
path = "src/main.rs"

[lints.rust]
warnings     = "deny"
missing_docs = "deny"

[lints.clippy]
pedantic                     = { level = "warn", priority = -1 }
cast_possible_truncation     = "allow"
cast_precision_loss          = "allow"
cast_sign_loss               = "allow"
cast_possible_wrap           = "allow"
float_cmp                    = "allow"
many_single_char_names       = "allow"
module_name_repetitions      = "allow"
similar_names                = "allow"
struct_excessive_bools       = "allow"
too_many_lines               = "allow"
unreadable_literal           = "allow"
wildcard_imports             = "allow"
items_after_statements       = "allow"
inline_always                = "allow"
missing_errors_doc           = "allow"
missing_panics_doc           = "allow"
must_use_candidate           = "allow"
trivially_copy_pass_by_ref   = "allow"
needless_pass_by_value       = "allow"
unused_self                  = "allow"

[dependencies]
bytemuck = "1.25.0"
chrono   = "0.4.44"
clap     = { version = "4.6.0", features = ["derive"] }
hex      = "0.4.3"
image    = { version = "0.25.10", default-features = false, features = ["png"] }
nalgebra = { version = "0.34.2", default-features = false, features = ["std"] }
rayon    = "1.12.0"
rustfft  = "6.4.1"
serde    = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha3     = "0.11.0"
smallvec = "1.15.1"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.11.0"
tempfile = "3.27.0"

[[bench]]
name    = "spectral"
harness = false

[[bench]]
name    = "post_effects"
harness = false

[features]
default = []

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
incremental     = false
strip           = "symbols"
