[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cs-image-generation-scripts"
version = "0.0.0"
description = "Development tooling config for CosmicSignature sync scripts (stdlib-only)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy==1.20.1",
    "ruff==0.15.10",
]

[tool.setuptools]
py-modules = ["_utils"]

# ---------------------------------------------------------------------------
# Ruff — lint + format (line length matches rustfmt.toml)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "target",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["_utils"]

# ---------------------------------------------------------------------------
# Mypy — strict typing for repository Python files
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
show_error_codes = true
files = ["_utils.py", "run.py", "run-test-images.py", "ci/verify_reference.py"]
